Overflow error on Safari issue

--- a/portfolio-webapp/src/index.css
+++ b/portfolio-webapp/src/index.css
@@ -10,6 +10,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   overscroll-behavior: none;
+  -webkit-overflow-scrolling: touch;
+  backface-visibility: hidden;
+  transform: translateZ(0);
 }
 
 html {
